# KFChess

./: .gitignore  README.md  app.py  constants.py  logging_setup.py  pyproject.toml
app/: game_builder.py
assets/: piece_animations.py
board_io/: board_parser.py  board_printer.py
client/: client_app.py  game_window.py  home_screen.py  lobby_view.py  login.py  run.py  server_connection.py  snapshot_view.py  ws_client.py
config/: settings.py
docs/: 2026-07-15-engine-changes.md  2026-07-16-design-decisions.md  architecture.md  interactive_view.md  kf-chess-architecture-plan.md
engine/: game_conditions.py  game_engine.py  snapshot.py
events/: action_history.py  dispatcher.py  game_events.py  score_tracker.py  serialization.py  sound_system.py
game/: engine.py
input/: board_mapper.py  controller.py  controller_builder.py
model/: board.py  game_state.py  piece.py
protocol/: __init__.py  event_codec.py  game_messages.py  lobby_messages.py  message_types.py  registry.py  serialization.py  snapshot_codec.py
realtime/: motion.py  real_time_arbiter.py  realtime_arbiter.py
rules/: piece_rules.py  rule_engine.py
scripts/: dev_test_client.py  dev_test_move_loop.py  dev_test_server.py
server/: connection_lifecycle.py  contracts.py  game_loop.py  interfaces.py  matchmaker.py  network_publisher.py  participant.py  publisher.py  rating.py  rooms.py  router.py  session.py  user_store.py  ws_server.py
tests/: test_action_history.py  test_app.py  test_board.py  test_board_mapper.py  test_board_parser.py  test_board_printer.py  test_click_router.py  test_img.py  (+56 more)
(+15 files in other folders)
